[package]
name = "trace_test"
version = "0.1.0"
edition = "2021"

[dependencies]
minitrace = { version = "0.6", features = ["enable"] }
actix-web = "4"
minitrace-jaeger = "0.6.4"
logcall = "0.1.5"
env_logger = "0.11.3"
log = "0.4.21"
futures-timer = "3.0.3"
tokio = {features = ["full"]}
futures = "0.3.30"
